repository summary: avoid table bleed on long commit messages
For commit messages with the first line being very long, the 'latest
changes' table on the repository overview page can 'bleed', so that the
commit number overlaps with the commit status.

Commit 15cb8156b10d732cf39b37a88c656894621c0f54 changed the initial truncate
on 50 characters to a chop at the first newline characters, causing this
issue to pop up more frequently.

Instead of using floating divs for the commit status and number of comments,
use dedicated table columns, as compact as possible.
Additionally, move these new columns to the very left of the table, instead
of cramming them in between the revision and commit message.

The comments-container class gets a new attribute 'white-space: nowrap' to
avoid the comment icon to wrap from the number of comments, when the table
does wrap on a small screen.
Note that the icon currently does not display as it should be renamed from
icon-comment-alt/colored to icon-comment. This will be fixed by Sean Farley.

--- a/kallithea/public/css/style.css
+++ b/kallithea/public/css/style.css
@@ -1417,6 +1417,10 @@ div.form div.fields div.field div.button {
     padding: 5px;
 }
 
+#content div.box table td.compact {
+    padding: 0;
+}
+
 #content div.box table tr.selected td {
     background: #FFC;
 }
@@ -2582,6 +2586,7 @@ BIN_FILENODE = 6
     overflow: hidden;
     padding: 0;
     margin: 0;
+    white-space: nowrap;
 }
 
 #graph_content .comments-container {
